Fix checkout date field on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,19 @@ h1 > a {
   color: #2980b9;
 }
 
+.checkout-date-input {
+  min-width: 0;
+  max-width: 100%;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.checkout-date-input::-webkit-date-and-time-value {
+  min-width: 0;
+  text-align: left;
+}
+
 .blog-content {
   color: #334155;
   font-size: 1rem;
